# Resonant-Scanned-LiDAR

./: Binary_RoI_Optimization.ipynb  Float_RoI_Optimization.py  README.md  pattern_generator.py
demo_data/: gt.npy  mdi.npy
liss_odometry/: Lissajous_odometry_simulations.ipynb  liss_simu_utils.py
liss_odometry/catkin_kitti_aloam_liss/: CMakeLists.txt  aloam.cpp  config.h  kittiHelper.cpp  laserMapping.cpp  laserOdometry.cpp  lidarFactor.hpp  scanRegistration.cpp
liss_odometry/catkin_kitti_aloam_liss/aloam_velodyne/: common.h
